hphp/hack/test/typecheck/const_attribute/union_intersection/const_and_intersection_fail.php.exp
File "const_and_intersection_fail.php", line 16, characters 7-8:
Cannot mutate a `__Const` property (Typing[4196])
