hphp/hack/test/typecheck/const_attribute/union_intersection/const_and_intersection_fail.php
<?hh
// Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.

class A {
  <<__Const>>
  public int $CA;

  public function __construct() {
    $this->CA = 4;
  }
}

interface B {}

function fail((A & B) $a): void {
  $a->CA = 42;
}
